import net.neoforged.gradleutils.PomUtilsExtension

import java.nio.file.Files

plugins {
    id 'java'
    id 'maven-publish'
    id 'net.neoforged.gradleutils' version '3.0.0-alpha.13'
    id 'com.github.johnrengelman.shadow' version '7.+'
}

group 'net.neoforged.camelot'
println("Version: ${version = gradleutils.version}")

gradleutils {
    setupCentralPublishing()
    setupSigning(signAllPublications: true)
}

tasks.register('run', JavaExec).configure {
    classpath(sourceSets.main.runtimeClasspath)
    mainClass.set('net.neoforged.camelot.BotMain')
    jvmArgs('--enable-preview')
    workingDir = project.file('run')
    doFirst {
        if (!workingDir.exists()) {
            Files.createDirectories(workingDir.toPath())
        }
    }
    javaLauncher.set(project.javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(21)
    })
}

abstract class Log extends DefaultTask {
    @OutputFile
    abstract RegularFileProperty getOutput()

    Log() {
        outputs.upToDateWhen { false }
    }

    @TaskAction
    void exec() {
        new ProcessBuilder('git', 'log', '-5', '--pretty=oneline')
            .redirectOutput(getOutput().asFile.get())
            .start().waitFor()
    }
}

tasks.register('gitLog', Log) {
    it.output.set(new File(project.buildDir, 'gitlog'))
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)
java.toolchain.vendor = JvmVendorSpec.GRAAL_VM

java {
    withJavadocJar()
    withSourcesJar()
}

repositories {
    mavenCentral()
    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
    maven {
        name 'jda-chewtils'
        url 'https://m2.chew.pro/releases'
    }
    maven {
        name 'jitpack'
        url 'https://jitpack.io'
    }
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs.add('--enable-preview')
}

javadoc {
    final opt = options as CoreJavadocOptions
    opt.addStringOption('-release', '21')
    opt.addBooleanOption('-enable-preview', true)
}

evaluationDependsOn(':config')

dependencies {
    implementation project(':config')

    implementation group: 'com.github.matyrobbrt', name: 'JDA-Chewtils', version: "${project.jda_chewtils_version}"
    implementation group: 'net.dv8tion', name: 'JDA', version: "${project.jda_version}"
    implementation group: 'com.google.guava', name: 'guava', version: "${project.guava_version}"
    implementation group: 'com.google.code.gson', name: 'gson', version: "${project.gson_version}"
    implementation group: 'ch.qos.logback', name: 'logback-classic', version: "${project.logback_version}"

    implementation group: 'org.flywaydb', name: 'flyway-core', version: project.flyway_version
    implementation group: 'org.jdbi', name: 'jdbi3-core', version: project.jdbi_version
    implementation group: 'org.jdbi', name: 'jdbi3-sqlobject', version: project.jdbi_version
    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: project.sqlite_version

    // YML parsing and generation
    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: project.jackson_version

    // GitHub API interaction library
    implementation group: 'org.kohsuke', name: 'github-api', version: project.ghapi_version
    // GitHub api JWT generation
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: project.jjwt_version
    implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: project.jjwt_version
    implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: project.jjwt_version
    // Converting private keys for GitHub auth
    implementation group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: project.bcpkix_version

    // JDA runtime dependency that we use for custom snowflake views
    implementation group: 'net.sf.trove4j', name: 'trove4j', version: project.trove4j_version

    // implementation group: 'club.minnced', name: 'discord-webhooks', version: project.discord_webhooks_version
    implementation group: 'net.sf.jopt-simple', name: 'jopt-simple', version: project.jopt_version // Used by tricks

    implementation group: 'org.graalvm.js', name: 'js', version: project.graal_version
    implementation group: 'org.graalvm.js', name: 'js-scriptengine', version: project.graal_version
    implementation group: 'args4j', name: 'args4j', version: project.arg4j_version
    implementation group: 'com.google.re2j', name: 're2j', version: project.re2j_version
    implementation group: 'it.unimi.dsi', name: 'fastutil', version: project.fastutil_version

    implementation group: 'com.matyrobbrt', name: 'semver-graaljs', version: project.semver_version
    implementation group: 'org.apache.maven', name: 'maven-artifact', version: project.maven_artifact_version
    implementation("io.javalin:javalin:${project.javalin_version}") {
        exclude module: 'slf4j-api'
    }
    implementation("com.j2html:j2html:${project.j2html_version}")
    implementation("org.eclipse.angus:angus-mail:${project.angus_mail_version}")
    implementation "org.json:json:${project.json_version}"

    compileOnly group: 'com.google.auto.service', name: 'auto-service', version: '1.0.1'
    annotationProcessor group: 'com.google.auto.service', name: 'auto-service', version: '1.0.1'

    compileOnly 'org.jetbrains:annotations:24.0.1'
}

jar {
    manifest {
        mainAttributes(
                'Maven-Artifact': "${project.group}:${archivesBaseName}:${project.version}",
                'Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                'Specification-Title': archivesBaseName,
                'Specification-Vendor': 'NeoForged',
                'Specification-Version': '1',
                'Implementation-Title': archivesBaseName,
                'Implementation-Version': "${project.version}",
                'Implementation-Vendor': 'NeoForged',
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                'Built-On-Java': "${System.getProperty('java.vm.version')} (${System.getProperty('java.vm.vendor')})",
                'Built-On': "${project.jda_version}-${project.jda_chewtils_version}",
                'Main-Class': 'net.neoforged.camelot.BotMain'
        )
    }
}

tasks.register('outputVersion') {
    doLast {
        file(System.getenv('GITHUB_ENV')) << "\nBOT_VERSION=${project.version}"
    }
}

shadowJar {
    mergeServiceFiles()
    archiveClassifier = 'all'
    archiveFile.set(project.file("$buildDir/libs/camelot-all.jar"))
    dependsOn(tasks.gitLog)
    from(tasks.gitLog.output)
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            artifactId = 'camelot'
            pom {
                name = 'Camelot'
                description = 'The Camelot Discord bot'
                rootProject.pomUtils.githubRepo(it, 'Camelot')
                rootProject.pomUtils.neoForgedDeveloper(it)
                rootProject.pomUtils.license(it, PomUtilsExtension.License.MIT)
            }
        }
    }
}
